Fixed: Responsiveness for mobile devices w.r.t to side navigation (#161)
* FIxed: Sidebar was not responsive for mobile view
Angular 12 migration
UI design changes

* Fixed Unit tese cases

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,22 @@ body {
 .mat-expansion-indicator::after {
   color: white
 }
+
+
+@media only screen and (max-width: 490px) {
+  .hide-search-bar-sm {
+    display: none;
+  }
+}
+
+
+@media only screen and (min-width: 490px) {
+  .hide-search-bar-md {
+    display: none;
+  }
+}
+
+.hide-search-bar-md #expand-search input[type=search]{
+	width: 100% !important;
+	margin-bottom: 20px !important;
+}
